--- a/style.css
+++ b/style.css
@@ -1,42 +1,50 @@
-*{
-    margin: 0px;
+header{
+    background-color: cadetblue;
 }
+
 .logo{
-    margin-top: 2%;
-    margin-left: 2.5%;
-    width: 30%;
+    width: 10%;
+    display: inline;
+}
+
+.menu{
+    color: white;
+    list-style: none;
+    display:inline-flex;
+    gap: 1rem;
+    float: right;
+    padding: 4.5%;
+}
+.banner{
+    width: 100%;
+    height: 500px;
 }
 h1{
-    color: brown;
-    /* text-align: left; */
-    margin-left: 1%;
-    font-size: 1.5vw;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    /* margin-top: .5%;  */
-    padding-top: .5%;
-    /* margin-bottom: 0%; */
+    text-align: center;
+
 }
-.JP{
-    position: relative;
-    top: -30px;
-    left:20px;
-    width: 50%;
+.btn btn-success{
+    position: fixed;
+  left: 50%;
+  bottom: 20px;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
 }
-h3{
-    color: aliceblue;
-    margin-left: 67.5%;
-    margin-top: 0%;
-}
-.divv{
-    display:flex ;
-    justify-content: space-between;
-    height: 200px;
-}
-.logos{
-    padding: 40px;
-    padding-top: 150px;
-}
-.info,.phone,.home{
-    width: 30px;
-    margin: 0 10px;
-}
+ footer{
+    background-color: cadetblue;
+    height: 100px;
+ }
+
+ .foot{
+    text-align: center;
+    font-size: larger;
+    padding: 2%;
+    font-style: bold;
+ }
+
+ .footi{
+    text-align: center;
+    font-size: larger;
+    font-style: bold;
+ }
+
