--- a/style.css
+++ b/style.css
@@ -48,3 +48,17 @@ h1{
     font-style: bold;
  }
 
+
+ @media screen and (max-width: 600px){
+
+    .logo{
+        width: 25%;
+        display: inline;
+    }
+
+    .banner{
+        width: 100%;
+        height: 300px;
+    }
+    
+}
