--- a/style.css
+++ b/style.css
@@ -48,8 +48,12 @@ h1{
     font-style: bold;
  }
 
+ .w-100{
+    width: 100%;
+    height: 500px;
+ }
 
- @media screen and (max-width: 600px){
+ @media screen and (max-width: 850px){
 
     .logo{
         width: 25%;
@@ -58,7 +62,7 @@ h1{
 
     .banner{
         width: 100%;
-        height: 300px;
+        height: 250px;
     }
     
 }
