--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-header{
-    background-color: cadetblue;
-}
 
 .logo{
     width: 10%;
@@ -57,10 +54,16 @@ h1{
     height: 500px;
  }
 
+
+
+ .navbar-collapse{
+    margin-left: 65%;
+ }
+
  @media screen and (max-width: 850px){
 
     .logo{
-        width: 25%;
+        width: 35%;
         display: inline;
     }
 
