--- a/style.css
+++ b/style.css
@@ -65,7 +65,72 @@ h1{
  .navbar-collapse{
     margin-left: 65%;
  }
- 
+ /* Contact */
+.contact-left{
+    flex-basis: 35%;
+}
+
+.contact-right{
+    flex-basis: 60%;
+}
+
+.contact-left p{
+    margin-bottom: 30px;
+}
+
+.contact-left p i{
+    color: #ff004f;margin-right: 15px;
+    font-size: 25px;
+}
+
+.social-icons{
+    margin-top: 30px;
+}
+
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+
+.social-icons a:hover{
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+
+.btn.btn2{
+    display: inline-block;
+    background: #33a5ce95;
+}
+
+.contact-right form{
+    width: 30%;
+    margin: 0 auto;    
+}
+
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+form .btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+
  @media screen and (max-width: 850px){
 
     .logo{
@@ -80,5 +145,9 @@ h1{
     p{
         font-size: 1.5rem;
         text-align: justify;
+    }
+    .contact-right form{
+        width: 70%;
+        margin: 0 auto;    
     }
 }
