--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     display: inline;
 }
 
+p{
+    font-size: 1.5rem;
+    text-align: justify;
+}
+
 img{
     padding: -5%;
 }
@@ -115,7 +120,7 @@ form input, form textarea{
     width: 100%;
     border: 0;
     outline: none;
-    background: #262626;
+    background: #699eb580;
     padding: 15px;
     margin: 15px 0;
     color: #fff;
